--- a/index.html
+++ b/index.html
@@ -7,22 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>JavaScript</h1>
-  <h3>In JavaScript we have Primitive Types and Reference Types</h3>
-  <h4>Primitive</h4>
-  <ul>
-    <li>strings</li>
-    <li>numbers</li>
-    <li>booleans</li>
-    <li>undefined</li>
-    <li>null</li>
-  </ul>
-  <h4>Reference</h4>
-  <ul>
-    <li>Objects</li>
-    <li>Arrays</li>
-    <li>Functions</li>
-  </ul>
+  <h1>Challenge 1</h1>
+  <p>In the script.js file, write your full name in the console.</p>
+  
 
   <script src="script.js"></script>  
 </body>
