restructured folders and added event listener info

--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
   <h1>Challenge 1</h1>
-  <p>In the script.js file, write your full name in the console.</p>
+  <h2>Names of a few Famous Avian Friends:</h2>
+  <p>Watch what happens when you scroll over me!</p>
+  <section class="silly-goose">
+    
+    <ul>
+      <li id="item1">Donald</li>
+      <li id="2">Howard</li>
+      <li id="3">Scrooge</li>
+      <li id="4">Daffy</li>
+    </ul>
+  </section>
+
+  <h1>Capturing Scroll Events</h1>
+  <div></div>
   
 
   <script src="script.js"></script>  
