added new folder for slideshow and updated OG html and js

--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@
     </ul>
   </section>
 
+  <p class="green">This should turn green when you hit the button</p>
+  <p class="green">And this one</p>
+  <p class="green">And this one!</p>
+  
+  <button>Turn green please!</button>
+
   <h1>Capturing Scroll Events</h1>
   <div></div>
+
+
   
 
   <script src="script.js"></script>  
