--- a/slideshow/slidshow.html
+++ b/slideshow/slidshow.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="slideshow.css">
 </head>
 <body>
     <h1>The Ol' Timely Slideshow</h1>
-    <section>
+    <section id="images">
         <img src="images/image1.jpg" alt="slideshow-images" id="myImage">
-        <p><a href="#" id="previous">Previous</a> --- <a href="#" id="next">Next</a></p>
     </section>
+    <p id="links"><a href="#" id="previous">Previous</a> --- <a href="#" id="next">Next</a></p>
     <script src="slideshow.js"></script>
 </body>
 </html>
