--- a/slideshow/slidshow.html
+++ b/slideshow/slidshow.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="slideshow.css">
+    <link href="slideshow.css" rel="stylesheet">
 </head>
 <body>
     <h1>The Ol' Timely Slideshow</h1>
